# wind_chaser_dashboard

./: .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  app.py  kinesis_stream.py  pyproject.toml
.github/workflows/: pipeline.yml
k8s/: deployment.yaml  ingress.yaml  service.yaml
templates/: index.html
tests/unit/: test_app.py
