[tool.poetry]
name = "dashboard"
version = "0.1.0"
description = ""
authors = ["Adam <awownysz@splunk.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.112.0"
uvicorn = "^0.30.6"
boto3 = "^1.35.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
