[tool.poetry]
name = "dashboard"
version = "0.1.0"
description = ""
authors = ["Adam <awownysz@splunk.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.112.2"}
uvicorn = "^0.30.6"
boto3 = "^1.35.1"
boto3-stubs = {extras = ["kinesis"], version = "^1.35.7"}


[tool.poetry.group.dev.dependencies]
black = "^24.8.0"
isort = "^5.13.2"
flake8 = "^7.1.1"
pre-commit = "^3.8.0"
httpx = "^0.27.2"
pytest = "^8.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
